--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-notity-node",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "List open pull requests on repositories, check which one is assigned to you.",
   "main": "index.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "commander": "^2.7.1",
     "github": "^0.2.3"
   },
-  "bing": {
+  "bin": {
     "gitlist": "index.js"
   }
 }
