--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-notity-node",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "List open pull requests on repositories, check which one is assigned to you.",
   "main": "index.js",
   "scripts": {
@@ -28,7 +28,7 @@
     "colors": "^1.0.3",
     "commander": "^2.7.1",
     "github": "^0.2.3",
-    "node-persist": "0.0.3"
+    "path": "^0.11.14"
   },
   "bin": {
     "gitlist": "index.js"
